codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__compact_queues_user_messages_snapshot.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 1610
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---










• Codex Working · 0s · esc interrupt · 1 active

• Messages to be submitted at end of turn
  ↳ Steer submitted while /compact was running.

› Ask Codex to do anything

  gpt-5.4 default · /tmp/project
