codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__concurrent_exec_status_lists_secondary_activity.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalize_snapshot_paths(rendered)
---
• Testing cargo test -p codex-tui

• Testing (0s • esc to interrupt)
  └ cargo test -p codex-tui
    Also active: Read main.rs


› Ask Codex to do anything

  gpt-5.5 default · /tmp/project
