codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exec_output_delta_history_output_status_action.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalize_snapshot_paths(rendered)
---
• Tested cargo test -p codex-tui
  └ Compiling codex-tui v0.0.0
    running 1819 tests

• Testing (0s • esc to interrupt)
  └ cargo test -p codex-tui


› Ask Codex to do anything

  gpt-5.5 default · /tmp/project
